<resources>
    <string name="app_name">Air Cargo Shipping Guidelines</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="tanya_regis">Do Not Have An Account? </string>
    <string name="registrasi">Register Now</string>
    <string name="persetujuan">I Am Responsible That The Data I Entered Is Correct</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="linkdg"><u>www.dgregulations.com</u></string>
    <string name="search">Search</string>
    <string name="type_name">Type Name</string>
    <string-array name="spinner_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="judul_class1">Class 1 - Explosive</string>
    <string name="judul_class2">Class 2 - Gases</string>
    <string name="judul_class3">Class 3 - Flammable Liquid</string>
    <string name="judul_class4">Class 4 - Flammable Solid</string>
    <string name="judul_class5">Class 5 - Oxidizing Substance and Organic Peroxides</string>
    <string name="judul_class6">Class 6 - Toxic and Infectious Substance</string>
    <string name="judul_class7">Class 7 - Radioactive Material</string>
    <string name="judul_class8">Class 8 - Corrosive</string>
    <string name="judul_class9">Class 9 - Miscellaneous Dangerous Goods</string>
    <string name="judul_handling">Handling Label</string>
    <string name="judul_subclass11">Class 1.1</string>
    <string name="judul_subclass12">Class 1.2</string>
    <string name="judul_subclass13">Class 1.3</string>
    <string name="judul_subclass14">Class 1.4</string>
    <string name="judul_subclass15">Class 1.5</string>
    <string name="judul_subclass16">Class 1.6</string>
    <string name="judul_subclass21">Class 2.1</string>
    <string name="judul_subclass22">Class 2.2</string>
    <string name="judul_subclass23">Class 2.3</string>
    <string name="judul_subclass41">Class 4.1</string>
    <string name="judul_subclass42">Class 4.2</string>
    <string name="judul_subclass43">Class 4.3</string>
    <string name="judul_subclass51">Class 5.1 Oxidizer</string>
    <string name="judul_subclass52">Class 5.2 Organic Peroxides</string>
    <string name="judul_subclass61">Class 6.1 Toxic Substance</string>
    <string name="judul_subclass62">Class 6.2 Infectious Substance</string>
    <string name="isi_dg">
         Dangerous goods are articles or subtances which are capable of posing a significant risk to health, safety or to property when transported by air.
    </string>
    <string name="isi_class1">
        Explosives (substances that are not explosives but which can form explosive atmospheres gas, vapor or dust are not included in class 1).
        Except which is too dangerous for transportation or place of dominant danger in accordance with other classes.
        Explosives, except devices containing explosives in such quantities or characters, so that accidental or accidental ignition or initiation during transport will have no external effects either through projection, fire, smoke, heat or loud noise.
        Class 1 has the following divisions:
    </string>
    <string name="isi_class2">
        Gas is a substance that At 50°\ C has a vapor pressure of more than 300 kPa or has actually become gas at 20°\ C at a normal pressure of 101.3 kPa.
        The gas sent can be: \n\n
        \t\t\t\t 1. Compressed gas \n
        \t\t\t\t 2. The liquefied gas \n
        \t\t\t\t 3. Gas cooled \n
        \t\t\t\t 4. The dissolved gas \n
        \t\t\t\t 5. Solidified gas \n\n
        There are 3 Division of Gasses :
    </string>
    <string name="isi_class3">
        The purpose of flammable liquid is flammable liquid and this class has no sub-division, but has its own characteristics and specific packing levels, as follows: \n\n
    </string>
    <string name="isi_class4">
        In class 4 it discusses about dangerous and flammable solid-shaped items. Class 4 is divided into 3 divisions.
        Packing Group Criteria: \n\n
        \t\t\t\t - PG 1: If the substance reacts with water strongly at ambient temperature and generally indicates a tendency for the gas to be produced to spontaneously ignite, or that reacts readily with water at room temperature so that the rate of evolution of flammable gases is equal to or greater than 10 l/kg Substance for one minute. \n
        \t\t\t\t - PG 2: If a substance / goods reacts to liquids / water with evolution greater than 20 l/kg hour and does not satisfy PG 1 or PG 2 criteria. \n
        \t\t\t\t - PG 3: If a substance or substance reacts slowly to liquid or water and the reaction is less than 1 l/kg hourly and does not meet critically PG 1 or PG 2. \n
    </string>
    <string name="isi_class5">
        In this fifth class explain about substances and peroxide goods that easily produce flammable O2 or increase the risk of fire hazard in contact with other combustible goods.
        There are two divisions in this class, namely:
    </string>
    <string name="isi_class6">
        This class describes items that contain toxins and formulations that can cause acute health damage and even death at certain concentrations if contaminated by humans.
    </string>
    <string name="isi_11">
        Has a mass explosion hazard (mass burst is one that affects almost the entire load almost instantaneously). \n\n
        Name : Explosive \n
        Cargo IMP code : REX, RCX, RGX, as applicable \n
        Symbol Exploding Bomb (Black) – Background Orange \n
    </string>
    <string name="isi_12">
        Has a projection hazard but not a mass explosion hazard. \n\n
        Name : Explosive \n
        Cargo IMP code : REX, RCX, RGX, as applicable \n
        Symbol Exploding Bomb (Black) – Background Orange \n
    </string>
    <string name="isi_13">
        Has a fire hazard and the danger of minor explosions or minor projection hazards or both, but not the danger of a mass explosion. This division consists of articles and substances that: \n\n
        \t\t\t - Generates a large enough heat, or \n
        \t\t\t - Burning one after the other, producing a small explosion and / or projection effect. \n\n
        Name : Explosive \n
        Cargo IMP code : REX, RCX, RGX, as applicable \n
        Symbol Exploding Bomb (Black) – Background Orange \n
    </string>
    <string name="isi_14">
        The effect is largely limited to this package and no projection of fragments with size or range is large enough to be expected. External fire should not cause an instantaneous burst of almost the entire package contents. \n\n
        Name : Explosive \n
        Cargo IMP code : RXB, RXC, RXD, RXE, RXG, RXS as applicable \n
        Figures (Black) – Background Orange \n
    </string>
    <string name="isi_15">
        Very insensitive material that has a danger of mass explosion. \n\n
        Name : Explosive \n
        Cargo IMP code : REX as applicable \n
        Figures (Black) – Background Orange \n
    </string>
    <string name="isi_16">
        Highly insensitive material that does not have a mass explosion hazard. \n\n
        Name : Explosive \n
        Cargo IMP code : REX as applicable \n
        Figures (Black) – Background Orange \n
    </string>
    <string name="isi_30">
        Name : Flammable Liquids \n
        Cargo IMP Code : RFL \n
        Symbol Flame (Black or white) Background Red \n
    </string>
    <string name="isi_41">
        Flammable solid self reactive substance.
        This division explains about solids that can be activated or burned on their own which can threaten flight safety.
        An example of this class is matches. \n\n
        Name : Flammable Solid \n
        Cargo IMP Code : RFS \n
        Symbol Flame (Black) White with seven vertical red stripes \n
    </string>
    <string name="isi_42">
        Substance liable to spontaneous combustion.
        This division explains about solids that can be activated or burned on their own when in the open air.
        Examples of substances from this class are Magnesium diamide. \n\n
        Name : Spontaneously Combustible \n
        Cargo IMP Code : RSC \n
        Symbol Flame (Black) Upper half white lower half red \n
    </string>
    <string name="isi_43">
        Substance dangerous when wet.
        This division explains about solids that can be activated and burned on their own if they have water.
        An example of this class is carbide. \n\n
        Name : Dangerous When Wet \n
        Cargo IMP Code : RFW \n
        Symbol Flame (Black or white) Blue \n
    </string>
    <string name="isi_51">
        Oxidizer is a substance that easily oxidizes with other substances. An example of this substance is bleaches (bleach). \n\n
        Name : Oxidizer \n
        Cargo IMP Code : ROX \n
        Symbol Flame over Cycle (Black) Background Yellow \n
    </string>
    <string name="isi_52">
        Organic peroxides are goods or substances made from a combination of two oxygen and oxygen structures.
        It may assist or facilitate the combustion process if exposure to fire or heat can result in an explosion.
        If it reacts with other materials then the danger will be greater, the decomposition of this material can produce toxic and combustible gas. \n\n
        Name : Organic Peroxide \n
        Cargo IMP Code : ROP \n
        Symbol Flame (Black or white) Background Upper half red, lower half yellow \n
    </string>
    <string name="isi_handling1">
        Name : Magnetized Material \n
        Cargo IMP Code : MAG \n
        Minimum Dimensions : 110 x 90 mm \n
        Color : Blue on White \n
    </string>
    <string name="isi_handling2">
        Name : This Way Up \n
        Minimum Dimensions : 74 x 105 mm \n
        Color : Red or Black on a contrasting background \n
    </string>
    <string name="isi_handling3">
        Name : Lithium Battery Label \n
        Cargo IMP Code : RLI, RLM, ELI \n
        Dimensions : 105 x 75 mm \n
        Color : the border on the label must have red diagonal hatchings. Text and symbol black on a contrasting background \n
    </string>
    <string name="isi_handling4">
        Name : Keep away from heat \n
        Dimensions : 74 x 105 mm \n
        Color : Red and black on a white background or alternative colors \n
    </string>
    <string name="isi_handling5">
        Name : Cargo Aircraft Only \n
        Cargo IMP Code : CAO \n
        Dimensions : 120 x110 mm \n
        Color : Black on Orangen \n
    </string>
    <string name="isi_handling6">
        Name : Cyrogenic Liquid \n
        Cargo IMP Code : RCL \n
        Minimum Dimensions : 75 x 105 mm \n
        Color : White on Green \n
    </string>
</resources>